hanging code fit

--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
-<%@LANGUAGE="JAVASCRIPT" CODEPAGE="1252"%>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/basic.dwt.asp" codeOutsideHTMLIsLocked="false" -->
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Tarbox Construction Inc.</title>
+<title>Tarbox Construction Inc.| Maine</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->
-<link href="Templates/site_styles.css" rel="stylesheet" type="text/css" />
-<style type="text/css">
+<link href="css/main.css" rel="stylesheet">
 <!--
 .style7 {color: #006699}
 -->
