--- a/index.html
+++ b/index.html
@@ -17,30 +17,24 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
-  <body>
+
 <!--
 .style7 {color: #006699}
 -->
-</style>
-<style type="text/css">
 <!--
 .style8 {font-size: 12px; font-style: normal; line-height: 25px; font-family: Arial, Helvetica, sans-serif;}
 -->
-</style>
-<style type="text/css">
+
 <!--
 .style9 {font-size: 12px; font-style: normal; line-height: 25px; font-family: Arial, Helvetica, sans-serif; color: #006699; }
 -->
-</style>
-<style type="text/css">
+
 <!--
 a:active {
 	color: #006699;
 }
 -->
-</style><!-- InstanceEndEditable -->
-<style type="text/css">
+
 <!--
 body,td,th {
 	font-family: Arial, Helvetica, sans-serif;
@@ -67,18 +61,14 @@ a:active {
 	color: #FFFFFF;
 }
 -->
-</style>
-<link href="site_styles.css" rel="stylesheet" type="text/css" />
-<style type="text/css">
+
 <!--
 .style6 {
 	color: #FFFFFF;
 	font-size: 10px;
 }
 -->
-</style>
 </head>
-
 <body>
 <table width="800" height="83" border="0" align="center" cellpadding="0" cellspacing="0" bordercolor="#E3E3E3" background="images/header_top.gif">
   <tr>
@@ -117,22 +107,22 @@ a:active {
 <table width="800" border="0" align="center" cellpadding="0" cellspacing="0">
   <tr>
     <td width="40" background="images/border_left.gif">&nbsp;</td>
-    <td width="720" height="479" align="left" valign="middle" background="images/house_bpool_01.jpg"><blockquote>
-      <p><span class="Header_01">Welcome<br />
-      </span><span class="body">Tarbox Construction has been serving<br />
-        the construction needs of clients in<br />
-        Southern Maine for <a href="about/index.html" class="style7">over 25 years</a>. From<br />
-        minor remodels and repairs to new homes,<br />
-        commercial and industrial construction,<br />
-        our satisfied customers have come to<br />
-        rely us for unsurpassed quality building<br />
-        and service. We provide a wide array<br />
-        of </span><span class="style8"><a href="services/index.html" class="style7">construction services</a></span><span class="body"> that include<br />
-        expert architectural design, general<br />
-        contractor services, permitting assistance,<br />
-        project management and custom millworks<br />
-        services. Please</span> <a href="contact/index.html"><span class="body_link">contact us</span></a><span class="body">, so we can<br />
-        help you with your construction needs. </span></p>
+    <td width="720" height="479" align="left" valign="middle" background="images/bpool-house.png"><blockquote>
+      <p><span class="Header_01">Welcome<br/></span>
+        <span class="body">Tarbox Construction has been serving<br/>
+        the construction needs of clients in<br/>
+        Southern Maine for over 25 yearss. From<br/>
+        minor remodels and repairs to new homes,<br/>
+        commercial and industrial construction,<br/>
+        our satisfied customers have come to<br/>
+        rely us for unsurpassed quality building<br/>
+        and service. We provide a wide array<br/>
+        of construction services that include<br/>
+        expert architectural design, general<br/>
+        contractor services, permitting assistance,<br/>
+        project management and custom millworks<br/>
+        services. Pleasecontact us, so we can<br/>
+        help you with your construction needs.</p>
       </blockquote></td>
     <td width="40" background="images/border_right.gif">&nbsp;</td>
   </tr>
@@ -140,7 +130,7 @@ a:active {
 <!-- InstanceEndEditable -->
 <table width="740" height="50" border="0" align="center" cellpadding="0" cellspacing="0" background="images/footer.gif">
   <tr>
-    <td><div align="center"><span class="style6">&copy; 2008 Tarbox Construction, Inc. All Rights Reserved. </span></div></td>
+    <td><div align="center"><span class="style6">&copy; 2016 Tarbox Construction, Inc. All Rights Reserved. </span></div></td>
   </tr>
 </table>
 <p>&nbsp;</p>
