--- a/index.html
+++ b/index.html
@@ -5,139 +5,124 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Tarbox Construction Inc.| Maine</title>
-    <meta name="description" content="Tarbox Construction has been serving the construction needs of clients in Southern Maine for over 25 years. From minor remodels and repairs to new homes, commercial and industrial construction, our satisfied customers have come to rely us for unsurpassed quality building and service.">
-    <!-- Bootstrap -->
-		<link href="css/main.css" rel="stylesheet">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="img/tci-sm.jpg">
+
+    <title>Tarbox Construction, Inc.| Maine</title>
+    <meta name="description" content="Tarbox Construction has been serving the construction needs of clients in Southern Maine for over 25 years. From minor remodels and repairs to new homes, commercial and industrial construction, our satisfied customers have come to rely us for unsurpassed quality building and service. ">
+
+    <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+
+    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <script src="assets/js/ie-emulation-modes-warning.js"></script>
+
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-<!--
-.style7 {color: #006699}
--->
-<!--
-.style8 {font-size: 12px; font-style: normal; line-height: 25px; font-family: Arial, Helvetica, sans-serif;}
--->
+    <!-- Custom styles for this template -->
+    <link href="css/carousel.css" rel="stylesheet">
+  </head>
+<!-- NAVBAR
+================================================== -->
+  <body>
+    <div class="navbar-wrapper">
+      <div class="container">
+        <nav class="navbar navbar-inverse navbar-static-top">
+          <div class="container">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="index.html">
+                <img alt="Brand" src="img/tci-md.jpg">
+              </a>
+            </div>
+            <div id="navbar" class="navbar-collapse collapse">
+              <ul class="nav navbar-nav">
+                <li><a href="#about">Services</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Portfolio<span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="#">Commercial</a></li>
+                    <li><a href="#">Residential</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </div>
+    </div>
 
-<!--
-.style9 {font-size: 12px; font-style: normal; line-height: 25px; font-family: Arial, Helvetica, sans-serif; color: #006699; }
--->
 
-<!--
-a:active {
-	color: #006699;
-}
--->
+    <!-- Carousel
+    ================================================== -->
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner" role="listbox">
+        <div class="item active">
+          <img class="first-slide" src="img/clam.jpg" alt="Clambake Restaurant">
+          <div class="container">
+          </div>
+        </div>
+        <div class="item">
+          <img class="second-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
+          <div class="container">
+          </div>
+        </div>
+        <div class="item">
+          <img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
+          <div class="container">
+          </div>
+        </div>
+      </div>
+      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div><!-- /.carousel -->
 
-<!--
-body,td,th {
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 12px;
-	color: #333333;
-}
-body {
-	background-image: url();
-}
-a:link {
-	text-decoration: none;
-}
-a:visited {
-	text-decoration: none;
-}
-a:hover {
-	text-decoration: underline;
-}
-a:active {
-	text-decoration: none;
-}
-.style4 {
-	font-size: 18px;
-	color: #FFFFFF;
-}
--->
 
-<!--
-.style6 {
-	color: #FFFFFF;
-	font-size: 10px;
-}
--->
-</head>
-<body>
-<table width="800" height="83" border="0" align="center" cellpadding="0" cellspacing="0" bordercolor="#E3E3E3" background="images/header_top.gif">
-  <tr>
-    <td>&nbsp;</td>
-  </tr>
-</table>
-<table width="800" height="83" border="0" align="center" cellpadding="0" cellspacing="0" background="images/header_middle.gif">
-  <tr>
-    <td width="300">&nbsp;</td>
-    <td width="92"><div align="right" class="style4">
-      <div align="center"><a href="index.html" class="navigation">Home</a></div>
-    </div></td>
-    <td width="92"><div align="right" class="style4">
-      <div align="center"><a href="services/index.html" class="navigation">Services</a></div>
-    </div></td>
-    <td width="92"><div align="right" class="style4">
-      <div align="center"><a href="portfolio/index.html" class="navigation">Portfolio</a></div>
-    </div></td>
-    <td width="92"><div align="right" class="style4">
-      <div align="center"><a href="about/index.html" class="navigation">About</a> </div>
-    </div></td>
-    <td width="92"><div align="right" class="style4">
-      <div align="center"><a href="contact/index.html" class="navigation">Contact</a></div>
-    </div></td>
-    <td width="40">&nbsp;</td>
-  </tr>
-</table>
-<table width="800" height="34" border="0" align="center" cellpadding="0" cellspacing="0">
-  <tr>
-    <td width="40" height="34" background="images/border_left.gif">&nbsp;</td>
-    <td width="720" height="34"><img src="images/heaer_bottom.gif" alt="header" width="720" height="34" /></td>
-    <td width="40" height="34" background="images/border_right.gif">&nbsp;</td>
-  </tr>
-</table>
-<!-- InstanceBeginEditable name="body" -->
-<table width="800" border="0" align="center" cellpadding="0" cellspacing="0">
-  <tr>
-    <td width="40" background="images/border_left.gif">&nbsp;</td>
-    <td width="720" height="479" align="left" valign="middle" background="images/bpool-house.png"><blockquote>
-      <p><span class="Header_01">Welcome<br/></span>
-        <span class="body">Tarbox Construction has been serving<br/>
-        the construction needs of clients in<br/>
-        Southern Maine for over 25 yearss. From<br/>
-        minor remodels and repairs to new homes,<br/>
-        commercial and industrial construction,<br/>
-        our satisfied customers have come to<br/>
-        rely us for unsurpassed quality building<br/>
-        and service. We provide a wide array<br/>
-        of construction services that include<br/>
-        expert architectural design, general<br/>
-        contractor services, permitting assistance,<br/>
-        project management and custom millworks<br/>
-        services. Pleasecontact us, so we can<br/>
-        help you with your construction needs.</p>
-      </blockquote></td>
-    <td width="40" background="images/border_right.gif">&nbsp;</td>
-  </tr>
-</table>
-<!-- InstanceEndEditable -->
-<table width="740" height="50" border="0" align="center" cellpadding="0" cellspacing="0" background="images/footer.gif">
-  <tr>
-    <td><div align="center"><span class="style6">&copy; 2016 Tarbox Construction, Inc. All Rights Reserved. </span></div></td>
-  </tr>
-</table>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="js/bootstrap.min.js"></script>
-</body>
+      <!-- FOOTER -->
+      <footer>
+        <p>&copy; 2016 Tarbox Construction, Inc.</p>
+      </footer>
+
+    </div><!-- /.container -->
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+    <script src="js/bootstrap.min.js"></script>
+    <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
+    <script src="js/vendor/holder.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="js/ie10-viewport-bug-workaround.js"></script>
+  </body>
 </html>
