--- a/index.html
+++ b/index.html
@@ -52,14 +52,19 @@
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 <li><a href="#about">Services</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About<span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="#">History</a></li>
+                    <li><a href="#">Team</a></li>
+                  </ul>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Portfolio<span class="caret"></span></a>
                   <ul class="dropdown-menu">
                     <li><a href="#">Commercial</a></li>
                     <li><a href="#">Residential</a></li>
                   </ul>
+                  <li><a href="#contact">Contact</a></li>
                 </li>
               </ul>
             </div>
