--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>Tarbox Construction, Inc.| Maine</title>
     <meta name="description" content="Tarbox Construction has been serving the construction needs of clients in Southern Maine for over 25 years. From minor remodels and repairs to new homes, commercial and industrial construction, our satisfied customers have come to rely us for unsurpassed quality building and service. ">
 
+    <link href='https://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -85,17 +86,17 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img class="first-slide" src="img/clam.jpg" alt="Clambake Restaurant">
+          <img class="first-slide" src="img/house-1.jpg" alt="Biddeford Pool House">
           <div class="container">
           </div>
         </div>
         <div class="item">
-          <img class="second-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
+          <img class="second-slide" src="img/table-1.jpg" alt="Biddeford Pool House Dining Room">
           <div class="container">
           </div>
         </div>
         <div class="item">
-          <img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
+          <img class="third-slide" src="img/bathroom-2.jpg" alt="Biddeford Pool House Master Bath">
           <div class="container">
           </div>
         </div>
