--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <![endif]-->
 
     <!-- Custom styles for this template -->
-    <link href="css/carousel.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
   </head>
 <!-- NAVBAR
 ================================================== -->
@@ -47,12 +47,12 @@
                 <span class="icon-bar"></span>
               </button>
               <a class="navbar-brand" href="index.html">
-                <img alt="Brand" src="img/tci-md.jpg">
+                <img alt="Brand" src="img/tci-md.jpg" a href="index.html">
               </a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li><a href="#about">Services</a></li>
+                <li><a href="#">Services</a></li>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About<span class="caret"></span></a>
                   <ul class="dropdown-menu">
