--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           </div>
         </div>
         <div class="item">
-          <img class="second-slide" src="img/table-1.jpg" alt="Biddeford Pool House Dining Room">
+          <img class="second-slide" src="img/table.jpg" alt="Biddeford Pool House Dining Room">
           <div class="container">
           </div>
         </div>
