--- a/index.html
+++ b/index.html
@@ -52,20 +52,20 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li><a href="#">Services</a></li>
+                <li><a href="services/index.html">Services</a></li>
                 <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About<span class="caret"></span></a>
+                  <a href="about" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About<span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="#">History</a></li>
-                    <li><a href="#">Team</a></li>
+                    <li><a href="about/history.html">History</a></li>
+                    <li><a href="about/team.html">Team</a></li>
                   </ul>
                 <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Portfolio<span class="caret"></span></a>
+                  <a href="portfolio" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Portfolio<span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="#">Commercial</a></li>
-                    <li><a href="#">Residential</a></li>
+                    <li><a href="portfolio/commercial.html">Commercial</a></li>
+                    <li><a href="portfolio/residential.html">Residential</a></li>
                   </ul>
-                  <li><a href="#contact">Contact</a></li>
+                  <li><a href="contact/index.html">Contact</a></li>
                 </li>
               </ul>
             </div>
