--- a/contact/index.html
+++ b/contact/index.html
@@ -1,135 +1,67 @@
-<%@LANGUAGE="JAVASCRIPT" CODEPAGE="1252"%>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/basic.dwt.asp" codeOutsideHTMLIsLocked="false" -->
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
-<!-- InstanceBeginEditable name="doctitle" -->
-<title>Tarbox Construction Inc.</title>
-<!-- InstanceEndEditable -->
-<!-- InstanceBeginEditable name="head" -->
-<link href="../Templates/site_styles.css" rel="stylesheet" type="text/css" />
-<style type="text/css">
-<!--
-a:active {
-	color: #006699;
-}
--->
-</style>
-<style type="text/css">
-<!--
-.style11 {font-size: 18px}
--->
-</style>
-<style type="text/css">
-<!--
-.style13 {color: #000000}
--->
-</style>
-<style type="text/css">
-<!--
-.style14 {color: #333333}
--->
-</style>
-<!-- InstanceEndEditable -->
-<style type="text/css">
-<!--
-body,td,th {
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 12px;
-	color: #333333;
-}
-body {
-	background-image: url();
-}
-a:link {
-	text-decoration: none;
-}
-a:visited {
-	text-decoration: none;
-}
-a:hover {
-	text-decoration: underline;
-}
-a:active {
-	text-decoration: none;
-}
-.style4 {
-	font-size: 18px;
-	color: #FFFFFF;
-}
--->
-</style>
-<link href="../site_styles.css" rel="stylesheet" type="text/css" />
-<style type="text/css">
-<!--
-.style6 {
-	color: #FFFFFF;
-	font-size: 10px;
-}
--->
-</style>
-</head>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>Bootstrap 101 Template</title>
 
-<body>
-<table width="800" height="83" border="0" align="center" cellpadding="0" cellspacing="0" bordercolor="#E3E3E3" background="../images/header_top.gif">
-  <tr>
-    <td>&nbsp;</td>
-  </tr>
-</table>
-<table width="800" height="83" border="0" align="center" cellpadding="0" cellspacing="0" background="../images/header_middle.gif">
-  <tr>
-    <td width="300">&nbsp;</td>
-    <td width="92"><div align="right" class="style4">
-      <div align="center"><a href="../index.html" class="navigation">Home</a></div>
-    </div></td>
-    <td width="92"><div align="right" class="style4">
-      <div align="center"><a href="../services/index.html" class="navigation">Services</a></div>
-    </div></td>
-    <td width="92"><div align="right" class="style4">
-      <div align="center"><a href="../portfolio/index.html" class="navigation">Portfolio</a></div>
-    </div></td>
-    <td width="92"><div align="right" class="style4">
-      <div align="center"><a href="../about/index.html" class="navigation">About</a> </div>
-    </div></td>
-    <td width="92"><div align="right" class="style4">
-      <div align="center"><a href="index.html" class="navigation">Contact</a></div>
-    </div></td>
-    <td width="40">&nbsp;</td>
-  </tr>
-</table>
-<table width="800" height="34" border="0" align="center" cellpadding="0" cellspacing="0">
-  <tr>
-    <td width="40" height="34" background="../images/border_left.gif">&nbsp;</td>
-    <td width="720" height="34"><img src="../images/heaer_bottom.gif" alt="header" width="720" height="34" /></td>
-    <td width="40" height="34" background="../images/border_right.gif">&nbsp;</td>
-  </tr>
-</table>
-<!-- InstanceBeginEditable name="body" -->
-<table width="800" border="0" align="center" cellpadding="0" cellspacing="0">
-  <tr>
-    <td width="40" background="../images/border_left.gif">&nbsp;</td>
-    <td width="720" height="479" align="left" valign="middle" background="images/contact_logo.gif"><blockquote>
-      <p><span class="Header_01">Contact Us <br />
-      </span><span class="body">Tarbox Construction is all about customer<br />
-      service and relationships. If you have<br />
-      questions or think that  you might like to<br />
-      work with us, we would be happy to<br />
-      talk to you.</span></p>
-      <p><span class="Header_01">Phone:</span></p>
-      <p><span class="Header_01"><span class="style11 style13 style14">207.284.2294</span></span></p>
-      <p><span class="Header_01">E-Mail:</span></p>
-      <p><a href="mailto:jtarbox1@maine.rr.com" class="body_link style11">jtarbox1@maine.rr.com</a></p>
-    </blockquote></td>
-    <td width="40" background="../images/border_right.gif">&nbsp;</td>
-  </tr>
-</table>
-<!-- InstanceEndEditable -->
-<table width="740" height="50" border="0" align="center" cellpadding="0" cellspacing="0" background="../images/footer.gif">
-  <tr>
-    <td><div align="center"><span class="style6">&copy; 2008 Tarbox Construction, Inc. All Rights Reserved. </span></div></td>
-  </tr>
-</table>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-</body>
-<!-- InstanceEnd --></html>
+    <!-- Bootstrap -->
+    <link href='https://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
+		<link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/main.css" rel="stylesheet">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+		<div class="navbar-wrapper">
+			<div class="container">
+				<nav class="navbar navbar-inverse navbar-static-top">
+					<div class="container">
+						<div class="navbar-header">
+							<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+								<span class="sr-only">Toggle navigation</span>
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+							</button>
+							<a class="navbar-brand" href="../index.html">
+								<img alt="Brand" src="../img/tci-md.jpg" a href="index.html">
+							</a>
+						</div>
+						<div id="navbar" class="navbar-collapse collapse">
+							<ul class="nav navbar-nav">
+								<li><a href="../services/index.html">Services</a></li>
+								<li class="dropdown">
+									<a href="about" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About<span class="caret"></span></a>
+									<ul class="dropdown-menu">
+										<li><a href="../about/history.html">History</a></li>
+										<li><a href="../about/team.html">Team</a></li>
+									</ul>
+								<li class="dropdown">
+									<a href="portfolio" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Portfolio<span class="caret"></span></a>
+									<ul class="dropdown-menu">
+										<li><a href="../portfolio/commercial.html">Commercial</a></li>
+										<li><a href="../portfolio/residential.html">Residential</a></li>
+									</ul>
+									<li><a href="../contact/index.html">Contact</a></li>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</nav>
+			</div>
+		</div>
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
+  </body>
+</html>
