added content to contact page

--- a/contact/index.html
+++ b/contact/index.html
@@ -4,8 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="icon" href="../img/tci-sm.jpg">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
+    <title>Tarbox Construction, Inc.| Contact Us</title>
+		<meta name="description" content="Tarbox Construction is all about customer service and relationships. If you have questions or think that you might like to work with us, we would be happy to talk to you.">
 
     <!-- Bootstrap -->
     <link href='https://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
@@ -58,6 +60,29 @@
 				</nav>
 			</div>
 		</div>
+		<div id="main-content">
+
+			<!--Contact Information--->
+			<div id="contact">
+					<div class="full-width" id="contact-info">
+		 <h2>Contact Us</h2>
+		 <p>Tarbox Construction is all about customer service and relationships. If you have questions or think that you might like to work with us, we would be happy to talk to you.</p>
+			<h3 id= "email-header">Drop us a line:</h3>
+			<a href="mailto:jtarbox1@maine.rr.com">jtarbox1@maine.rr.com</a>
+			<h3 id="phone-header">Give us a call:</h3>
+			<p>(207) 468 - 2499</p>
+		 <h3 id= "socialmedia-header">Or,</h3>
+	<!--Social Media Links-->
+					<p><a href="https://www.facebook.com/Tarbox-Construction-Inc-1270395452975167/" target="_blank"><img src="../img/fb.png" alt="facebook icon"/></a></p>
+				 </div><!--contact-info--->
+
+
+				 <!-- FOOTER -->
+				 <footer>
+					 <p>&copy; 2016 Tarbox Construction, Inc.</p>
+				 </footer>
+
+			 </div><!-- /.container -->
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
